// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row"><div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div><!--v-if--></span>"`;

exports[`Separator > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <div class="font-[family-name:var(--ui-font-family-primary)] font-(--ui-font-weight-normal) flex text-(--ui-color-design-plain-na-content-secondary) text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) mx-3 whitespace-nowrap"><span class="air-secondary-accent inline-flex items-center justify-center select-none rounded-full align-middle bg-(--ui-color-base-8) ring ring-(--ui-color-base-7) size-[28px] text-(length:--ui-font-size-xs)/(--ui-font-line-height-reset) shrink-0"><img role="img" src="https://github.com/benjamincanac.png" width="22" height="22" class="h-full w-full rounded-[inherit] object-cover"></span></div>
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
</div>"
`;

exports[`Separator > renders with b24ui correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row-reverse">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with color success correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row" color="success">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <div class="font-[family-name:var(--ui-font-family-primary)] font-(--ui-font-weight-normal) flex text-(--ui-color-design-plain-na-content-secondary) text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) mx-3 whitespace-nowrap">
    <i-lucide-image class="shrink-0 size-7"></i-lucide-image>
  </div>
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
</div>"
`;

exports[`Separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <div class="font-[family-name:var(--ui-font-family-primary)] font-(--ui-font-weight-normal) flex text-(--ui-color-design-plain-na-content-secondary) text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) mx-3 whitespace-nowrap"><span class="">+1</span></div>
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
</div>"
`;

exports[`Separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" class="flex items-center align-center text-center h-full flex-col">
  <div class="border-(--ui-color-divider-vibrant-default) h-full border-solid border-s-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size thick correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thick)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size thin correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-dashed border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-dotted border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type double correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-double border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" class="flex items-center align-center text-center w-full flex-row">
  <div class="border-(--ui-color-divider-vibrant-default) w-full border-solid border-t-(length:--ui-border-width-thin)"></div>
  <!--v-if-->
</div>"
`;
